--- a/SpringBoot/barbearia/pom.xml
+++ b/SpringBoot/barbearia/pom.xml
@@ -60,7 +60,12 @@
       		<version>8.0.32</version>
 		</dependency>
 
-	</dependencies>
+		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+ </dependencies>
 
 	<build>
 		<plugins>
